# code-theory-course

./: CMakeLists.txt
Lab1/: main.cpp
Lab2/: main.cpp
Lab2/solution/: PolarCode.cpp  main.cpp
Lab2/src/: PolarDecoder.hpp  PolarEncoder.hpp  main.cpp
Lab3/: main.cpp
Lab3/tests/: output1.txt  output10.txt  output100.txt  output101.txt  output102.txt  output103.txt  output104.txt  output105.txt  output106.txt  output107.txt  output108.txt  output109.txt  output110.txt  output111.txt  output112.txt  output113.txt  output114.txt  output115.txt  output116.txt  output117.txt  output118.txt  output119.txt  output12.txt  output120.txt  output121.txt  output122.txt  output123.txt  output124.txt  output125.txt  output126.txt  output127.txt  output128.txt  output129.txt  output13.txt  output130.txt  output131.txt  output132.txt  output133.txt  output134.txt  output135.txt  (+643 more)
